Limit width of radio params in module to avoid overlap with submit

--- a/assets/css/params/_Radio.scss
+++ b/assets/css/params/_Radio.scss
@@ -5,6 +5,7 @@
     margin-top: 1.5rem;
     z-index: 1; // needs z-index in order to be on top of submit button
     position: relative;
+    max-width: 20rem;
   }
 
   .button-group {
